Fixed h2 css leaks from rootcase.css files, added scrollbar

--- a/client/src/components/dashboard/PoRootCause.css
+++ b/client/src/components/dashboard/PoRootCause.css
@@ -35,7 +35,7 @@
 }
 
 /* Section heading */
-h2 {
+.head {
     font-size: 22px;
     font-weight: bold;
     color: #a00000;
